--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <script src="./scripts/main.js"></script>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  
+  <table id="site-container">
+    <tr>
+      <td valign="top">
+        <h1>Rock, Paper, Scissors</h1>
+        <div class="game-container">
+        <div class="round-number-container">
+          <p>Number of rounds:</p>
+          <div class="choices-container">
+            <input type="radio" name="match" id="one-match" value="1">
+            <label for="one-match">1</label>
+            <input type="radio" name="match" id="three-match" value="3">
+            <label for="one-match">3</label>
+            <input type="radio" name="match" id="five-match" value="5">
+            <label for="one-match">5</label>
+          </div>
+        </div>
+        <div class="play-button-container">
+          <button>Play</button>
+        </div>
+      </div>
+    </td>
+    </tr>
+    <tr>
+      <td valign="bottom">
+        <div class="footer">
+          Made by smsc
+        </div>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
